
syntax = "proto3";
package lines;

// The greeting service definition.
service Update {
  // Sends a greeting
  rpc UpdateTable (StatusRequest) returns (StatusReply) {}
}

// The request message 
message StatusRequest {
  int32 x = 1;
  int32 y = 2;
}

// The response message 
message StatusReply {
  repeated int32 table = 1;
  bool active = 2;
  int32 x = 3;
  int32 y = 4;
}